--- a/HelloWeb/index.html
+++ b/HelloWeb/index.html
@@ -5,11 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="app.js"></script>
 </head>
 <body>
 hello world
-<h1>标题h1</h1>
+<h1 id="title">标题h1</h1>
 <h2>标题h2</h2>
 <h3>标题h3</h3>
 <h4>标题h4</h4>
@@ -22,5 +21,15 @@ hello
 <img src="images/pic0.jpg">这是一个图片</img>
 <a href="https://www.baidu.com">百度链接</a>
 
+<ul class="list">
+    <li>列表一</li>
+    <li>列表二</li>
+    <li>列表三</li>
+</ul>
+
+<!--<button class="btn" onclick="alert('弹框')" onmouseenter="console.log('鼠标上移')">按钮</button>-->
+<button class="btn">按钮</button>
+
+<script src="app.js"></script>
 </body>
 </html>
