add: 添加类名选择器

--- a/web3_样式style/index.html
+++ b/web3_样式style/index.html
@@ -9,19 +9,34 @@
 
     <!-- 第二种，内部设置 -->
     <style type="text/css">
-        p{
+        p {
             color: blueviolet;
+        }
+
+        .red {
+            width: 100px;
+            height: 100px;
+            background-color: red;
+        }
+        .green {
+            width: 100px;
+            height: 100px;
+            background-color: green;
         }
     </style>
 
 </head>
 <body>
 
-<h2>外部引用，设置样式</h2>
+    <h2>外部引用，设置样式</h2>
 
-<p>内部设置，修改段落样式</p>
+    <p>内部设置，修改段落样式</p>
 
-<a style="color: cadetblue">标签内部设置样式</a>
+    <a style="color: cadetblue">标签内部设置样式</a>
+
+    <div class="red"></div>
+    <div class="green"></div>
+    <div class="red"></div>
 
 </body>
 </html>
