add: 添加多类名和id选择器

--- a/web3_样式style/index.html
+++ b/web3_样式style/index.html
@@ -13,6 +13,7 @@
             color: blueviolet;
         }
 
+        /* 样式点定义，结构类定义，一个或多个，开发最常用 */
         .red {
             width: 100px;
             height: 100px;
@@ -22,6 +23,12 @@
             width: 100px;
             height: 100px;
             background-color: green;
+        }
+        .font20 {
+            font-size: 20px;
+        }
+        #pink {
+            color: pink;
         }
     </style>
 
@@ -34,9 +41,10 @@
 
     <a style="color: cadetblue">标签内部设置样式</a>
 
-    <div class="red"></div>
-    <div class="green"></div>
-    <div class="red"></div>
-
+    <div class="red">红色</div>
+    <div class="green">绿色</div>
+    <div class="red">红色</div>
+    <div class="red font20">红色</div>
+    <div id="pink">迈克尔*杰克逊</div>
 </body>
 </html>
