add: 添加通配符选择器

--- a/web3_样式style/index.html
+++ b/web3_样式style/index.html
@@ -27,8 +27,14 @@
         .font20 {
             font-size: 20px;
         }
+
+        /* id选择器的口诀：样式#定义，结构id调用，只能调用一次，别人切勿使用 */
         #pink {
             color: pink;
+        }
+
+        * {
+            font-weight: 800;
         }
     </style>
 
