add: 添加格式化代码

--- a/web3_样式style/emmet.html
+++ b/web3_样式style/emmet.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <style>
+    .demo {
+      /* w200 */
+      width: 200px;
+      /* ti2em */
+      text-indent: 2em;
+      /* lh20px */
+      line-height: 20px;
+    }
+  </style>
+
 </head>
+
 <body>
-  
+
   <!-- 生成标签，直接输入标签名，按tab键即可。比如 div 然后tab键，即可得：<div> </div> -->
   <div></div>
 
@@ -41,4 +55,5 @@
   <p>3</p>
 
 </body>
+
 </html>
