add: 添加背景图片精确位置，混合位置设置

--- a/web3_样式style/background.html
+++ b/web3_样式style/background.html
@@ -21,6 +21,33 @@
       /* 方位名词：方位名词分水平，垂直两类: left right center top bottom ,设置设置方位名词时，它们两个的前后顺序无要求，只要一个设置成水平的，另一个自动推断成垂直的。如果只设置了一个，系统推断出水平或垂直后，另一个默认用center*/
       background-position: top center;
     }
+
+    .sheji {
+      width: 300px;
+      height: 300px;
+      background-repeat: no-repeat;
+      background-color: #e3e;
+      background-image: url(images/img_0.jpg);
+      /* 背景图片位置设置，使用精确单位 */
+      /* 使用精确单位设置的话，background-position: x y; 这2个数字的设置是有明确的顺序的，第一个是X轴的，第二个是Y轴的。*/
+      background-position: 20px 70px;
+      text-indent: 4em;
+      line-height: 100px;
+    }
+
+    .wangzhe {
+      width: 100%;
+      height: 1000px;
+      background-image: url(images/97703900184194.jpeg);
+      /* 背景图片位置，混合设置 */
+      /* 背景图片位置，混合设置的话，background-position: 0 0; 这2个数字的设置是有明确的顺序的，第一个是X轴的，第二个是Y轴的。其中这2个可以是数字或方位名词任选*/
+      background-position: center 40px;
+    }
+
+    body {
+      background-image: url(images/97703900184194.jpeg);
+      background-attachment: fixed;
+    }
   </style>
 
 </head>
@@ -30,6 +57,43 @@
   <div class="img">
 
   </div>
+
+  <div class="sheji">
+    学服装设计，就到新东方
+  </div>
+
+  <div class="wangzhe"></div>
+
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
+  <p>天王盖地虎</p>
 
 </body>
 
