--- a/web3_样式style/background.html
+++ b/web3_样式style/background.html
@@ -46,6 +46,8 @@
 
     body {
       background-image: url(images/97703900184194.jpeg);
+      /* 将背景图片固定，形成滚动视觉差, 默认是croll，可以滚动的 */
+      /* background-attachment: scroll; */
       background-attachment: fixed;
     }
   </style>
