add: 添加canvas更新流程

--- a/web7_h5canvas元素/canvas.html
+++ b/web7_h5canvas元素/canvas.html
@@ -14,10 +14,11 @@
 
   <script>
     var canvas = document.getElementById('canvasId')
-    
+    // 获取2d画布
     var ctx = canvas.getContext('2d')
-
+    // 设置填充色
     ctx.fillStyle='red'
+    // 填充一个矩形
     ctx.fillRect(10,20,100,100)
 
     console.log(ctx);
